...
			PrimaryButton("Play offline") {
				onPlayOffline()
			}
			.buttonBackground(.backgroundLight)
			.padding(.horizontal)
			.padding(.bottom)
			.accessibility(identifier: "playOffline")
		}

		PrimaryButton("Settings") {
			onShowSettings()
		}
		.buttonBackground(.backgroundLight)
...
