...
	}

	enum MockableRequest: Hashable {
		case openMatches
		case matchDetails(Match.ID)
		case joinMatch(Match.ID)
		case createMatch

		private static let matchEndpoint = Regex(#"/api/matches"#)
		private static let matchId = Regex(
			#"/api/matches/([0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12})"#
		)

...
