...
	private var startButton: some View {
		Button {
			viewModel.postViewAction(.startGame)
		} label: {
			Text("Start")
		}
		.accessibility(identifier: "startMatch")
	}
}

// MARK: - Actions

extension LocalRoomView {
...
